Fix some layout issues

--- a/src/features/choice/Arrange.module.css
+++ b/src/features/choice/Arrange.module.css
@@ -5,8 +5,6 @@
   width: 100%;
   height: max-content;
   z-index: 1;
-  position: absolute;
-  bottom: 0;
   overflow: hidden;
 }
 
@@ -16,11 +14,10 @@
   justify-items: center;
   display: flex;
   flex-direction: row;
-  gap: 1em;
+  gap: .3em;
   position: relative;
-  box-shadow: 0 0 1px 1px black;
   border-radius: 0.5em;
-  background-color: var(--lighter-background);
+  background-color: oklch(from var(--lighter-background) calc(l + .1) c h);
   padding: 1em;
 }
 
