--- a/src/features/playArea/PlayArea.module.css
+++ b/src/features/playArea/PlayArea.module.css
@@ -1,5 +1,5 @@
 .playArea {
-  font-size: .9em;
+  font-size: .7em;
   display: grid;
   grid-template: "in-play" 1fr / 1fr;
   width: 100%;
@@ -19,7 +19,10 @@
   grid-auto-columns: auto;
   grid-template-rows: 1fr;
   gap: .25em;
-  /* margin-right: -4em; */
+
+  &.stacked {
+    font-size: var(--font-size);
+  }
 }
 
 .inPlay.stacked>*:nth-child(n - 1)>* {
