--- a/src/features/reveal/Reveal.module.css
+++ b/src/features/reveal/Reveal.module.css
@@ -7,7 +7,6 @@
   gap: .25em;
   align-items: center;
   justify-items: center;
-  background-color: var(--background-color);
   z-index: 1;
   overflow: hidden;
 }
